objects/amc__Retrospective__c.object
<CustomObject>
    <fields>
        <fullName>amc__Date__c</fullName>
        <inlineHelpText>Identifie the date this Retrospective was held</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Project this Retrospective relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Retrospectives</relationshipLabel>
        <relationshipName>Retrospectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Retrospective_Notes__c</fullName>
        <inlineHelpText>Detailed notes relating to the Retrospective</inlineHelpText>
        <label>Retrospective Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Retrospective</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Retrospective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retrospectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>